velero/backup-all-volumes/.chainsaw-test/cronjob-patched.yaml
apiVersion: batch/v1
kind: CronJob
metadata:
  name: cronjob
  namespace: backup-velero-yes
spec:
  schedule: "* * * * *"
  jobTemplate:
    spec:
      template:
        metadata:
          labels:
            app: busybox
          annotations:
            backup.velero.io/backup-volumes: task-pv-storage
        spec:
          restartPolicy: Never
          volumes:
            - name: task-pv-storage
              persistentVolumeClaim:
                claimName: mypvc
          containers:
            - name: container01
              image: busybox:1.35
              volumeMounts:
                - mountPath: "/usr/share/nginx/html"
                  name: task-pv-storage
