velero/backup-all-volumes/.chainsaw-test/deploy-patched.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment
  namespace: backup-velero-yes
  labels:
    app: busybox
spec:
  replicas: 1
  selector:
    matchLabels:
      app: busybox
  template:
    metadata:
      labels:
        app: busybox
      annotations:
        backup.velero.io/backup-volumes: task-pv-storage
    spec:
      volumes:
        - name: task-pv-storage
          persistentVolumeClaim:
            claimName: mypvc
      containers:
        - name: container01
          image: ghcr.io/kyverno/test-busybox:1.35
          volumeMounts:
            - mountPath: "/usr/share/nginx/html"
              name: task-pv-storage
