velero/backup-all-volumes/.chainsaw-test/pod-patched04.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod04
  namespace: backup-velero-yes
  annotations:
    backup.velero.io/backup-volumes: task-pv-storage,external
spec:
  volumes:
    - name: task-pv-storage
      persistentVolumeClaim:
        claimName: mypvc
    - name: external
      persistentVolumeClaim:
        claimName: external
    - name: empty-storage
      emptyDir: {}
  containers:
    - name: container01
      image: busybox:1.35
      volumeMounts:
        - mountPath: "/usr/share/nginx/html"
          name: task-pv-storage
        - mountPath: "/external"
          name: external
