velero/backup-all-volumes/.chainsaw-test/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  creationTimestamp: null
  name: backup-all-volumes
spec:
  steps:
  - name: step-01
    try:
    - apply:
        file: ../backup-all-volumes.yaml
    - apply:
        file: ns.yaml
    - assert:
        file: policy-ready.yaml
  - name: step-02
    try:
    - apply:
        file: pods.yaml
    - apply:
        file: podcontroller.yaml
  - name: step-03
    try:
    - assert:
        file: pod-patched01.yaml
    - assert:
        file: pod-patched03.yaml
    - assert:
        file: pod-patched04.yaml
    - assert:
        file: deploy-patched.yaml
    - assert:
        file: cronjob-patched.yaml
    - error:
        file: pod-not-patched02.yaml
